--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small">I'm</span> John Doe.</h1>
     <p>Photographer and Web Designer.</p>
-    <img src="https://www.w3schools.com/w3images/man_smoke.jpg" alt="boy" class="w3-image" width="992" height="1108">
+    <img src="https://github.com/Gand0r/Gand0r.github.io/blob/dfb74d3daf956ea84402babf014903d19ad9ab57/LRM_EXPORT_44480362749678_20200219_173505716.jpeg" alt="boy" class="w3-image" width="992" height="1108">
   </header>
 
   <!-- About Section -->
