--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 <div class="w3-padding-large" id="main">
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
-    <h1 class="w3-jumbo"><span class="w3-hide-small">I'm</span> John Doe.</h1>
-    <p>Photographer and Web Designer.</p>
+    <h1 class="w3-jumbo"><span class="w3-hide-small">Saya</span> Indra Setiawan.</h1>
+    <p>EDP BATAM.</p>
     <img src="https://github.com/Gand0r/Gand0r.github.io/blob/main/LRM_EXPORT_44480362749678_20200219_173505716.jpeg" alt="boy" class="w3-image" width="992" height="1108">
   </header>
 
