--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <img src="foto/pisang.jpg" style="width:100%">
       </div>
       <div class="w3-half">
-        <img src="foto/random.jpg" style="width:100%">
+        <img src="foto/io22.png" style="width:100%">
         <img src="foto/2.jpg" style="width:100%">
       </div>
     <!-- End photo grid -->
@@ -142,14 +142,9 @@
   <!-- End Contact Section -->
   </div>
   
-<!-- Footer. This section contains an ad for W3Schools Spaces. You can leave it to support us. -->
 <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
-  <i class="fa fa-facebook-official w3-hover-opacity"></i>
-  <i class="fa fa-instagram w3-hover-opacity"></i>
-  <i class="fa fa-snapchat w3-hover-opacity"></i>
-  <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-  <i class="fa fa-twitter w3-hover-opacity"></i>
   <i class="fa fa-linkedin w3-hover-opacity"></i>
+  <i class="fa fa-github w3-hover-opacity"></i>
  <!-- End footer -->
 </footer>
 
