--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
   
 <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
   <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <i class="fa fa-github w3-hover-opacity"></i>
+  <i class="fa fa-github w3-hover-opacity" href="https://github.com/Gand0r"></i>
  <!-- End footer -->
 </footer>
 
