--- a/index.html
+++ b/index.html
@@ -130,12 +130,11 @@
       <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: +62 08962336XXX</p>
       <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: 7610069+Gand0r@users.noreply.github.com</p>
     </div><br>
-    <p>Terima kasih</p>
+    <a><img alt="GitHub followers" src="https://img.shields.io/github/followers/Gand0r?style=social"></a><br>
+    <a><img alt="GitHub top language" src="https://img.shields.io/github/languages/top/Gand0r/home?style=for-the-badge"></a>
   <!-- End Contact Section -->
   </div>
-  
 <!-- END PAGE CONTENT -->
 </div>
-  
 </body>
 </html>
