--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       </div>
       <div class="w3-half">
         <img src="foto/io22.png" style="width:100%">
-        <img src="foto/2.jpg" style="width:100%">
+        <img src="foto/daun.jpg" style="width:100%">
       </div>
     <!-- End photo grid -->
     </div>
@@ -130,7 +130,6 @@
       <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: +62 08962336XXX</p>
       <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: 7610069+Gand0r@users.noreply.github.com</p>
     </div><br>
-    <a><img alt="GitHub followers" src="https://img.shields.io/github/followers/Gand0r?style=social"></a><br>
     <a><img alt="GitHub top language" src="https://img.shields.io/github/languages/top/Gand0r/home?style=for-the-badge"></a>
   <!-- End Contact Section -->
   </div>
