--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="w3-white">
       <div class="w3-dark-grey" style="height:28px;width:95%"></div>
     </div>
-    <p class="w3-wide">Komputer Hardware & Troubleshooting</p>
+    <p class="w3-wide">Hardware</p>
     <div class="w3-white">
       <div class="w3-dark-grey" style="height:28px;width:95%"></div>
     </div>
@@ -127,7 +127,7 @@
     <div class="w3-section">
       <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Kota Batam, Indonesia</p>
       <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: +62 08962336XXX</p>
-      <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: 7610069+Gand0r@users.noreply.github.com</p>
+      <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: -</p>
     </div><br>
     <a><img alt="GitHub top language" src="https://img.shields.io/github/languages/top/Gand0r/home?style=for-the-badge"></a>
   <!-- End Contact Section -->
