--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
     <hr style="width:200px" class="w3-opacity">
     <div class="w3-section">
       <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Kota Batam, Indonesia</p>
-      <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: +62 08962336XXX</p>
-      <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: -</p>
+      <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> +62 08962336XXX</p>
+      <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> -</p>
     </div><br>
-    <a><img alt="GitHub top language" src="https://img.shields.io/github/languages/top/Gand0r/home?style=for-the-badge"></a>
+    <a href="https://github.com/Gand0r"><img alt="GitHub top language" src="https://img.shields.io/github/languages/top/Gand0r/home?style=for-the-badge"></a>
   <!-- End Contact Section -->
   </div>
 <!-- END PAGE CONTENT -->
