--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Indra Setiawan</title>
+    <title>Personal Page</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -64,7 +64,12 @@
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">Indra Setiawan</h2>
     <hr style="width:200px" class="w3-opacity">
-    <p>Saya Indra Setiawan, sudah sejak 1997 di Kota Batam (dari masih Sekolah Dasar), dari lulus sampai sekarang sudah beberapa perusahaan tempat saya bekerja dan saya lebih mengutamakan lingkungan kerja yang baik.
+    <p><details><summary>Pekerjaan</summary><br>
+      Saat ini saya bekerja di PT Indomarco Prismatama (Indomaret Group) Cabang Batam, adapun detailnya sebagai berikut
+      * 2015 - 2018 sebagai EDP Service, EDP OPR, EDP Logistik, EDP Network & Server
+      * 2018 - 2021 sebagai EDP OPR
+      * 2021 - saat ini sebagai EDP Network
+    </details>
     </p>
     <h3 class="w3-padding-16 w3-text-light-grey">My Skills</h3>
     <p class="w3-wide">Networking</p>
@@ -134,8 +139,7 @@
   </div>
 <!-- END PAGE CONTENT -->
 </div>
-</body>
-</html>
+  
 <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
 <script>
   kofiWidgetOverlay.draw('gand0r', {
@@ -145,3 +149,6 @@
     'floating-chat.donateButton.text-color': '#fff'
   });
 </script>
+  
+</body>
+</html>
