--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
     <h2 class="w3-text-light-grey">Indra Setiawan</h2>
     <hr style="width:200px" class="w3-opacity">
     <p><details><summary>Pekerjaan</summary><br>
-      Saat ini saya bekerja di PT Indomarco Prismatama (Indomaret Group) Cabang Batam, adapun detailnya sebagai berikut
-      * 2015 - 2018 sebagai EDP Service, EDP OPR, EDP Logistik, EDP Network & Server
-      * 2018 - 2021 sebagai EDP OPR
-      * 2021 - saat ini sebagai EDP Network
+      Saat ini saya bekerja di PT Indomarco Prismatama (Indomaret Group) Cabang Batam, adapun detailnya sebagai berikut :
+      <li>2015 - 2018 sebagai EDP Service, EDP OPR, EDP Logistik, EDP Network & Server</li>
+      <li>2018 - 2021 sebagai EDP OPR</li>
+      <li>2021 - saat ini sebagai EDP Network</li>
     </details>
     </p>
     <h3 class="w3-padding-16 w3-text-light-grey">My Skills</h3>
