--- a/index.html
+++ b/index.html
@@ -173,3 +173,6 @@
 </div>
 </body>
 </html>
+
+* * *
+![](https://visitor-badge.glitch.me/badge?page_id=Gand0r.Gand0r) [![CircleCI](https://circleci.com/gh/Gand0r/Gand0r.github.io/tree/main.svg?style=svg)](https://circleci.com/gh/Gand0r/Gand0r.github.io/tree/main)
