--- a/index.html
+++ b/index.html
@@ -64,14 +64,12 @@
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">Indra Setiawan</h2>
     <hr style="width:200px" class="w3-opacity">
-    <p><li><details><summary>Pengalaman EDP Cabang Batam</summary><br></li> 
+    <p><li><details><summary>Pengalaman Kerja</summary><br></li>
       Saya indra setiawan, saya saat ini bekerja di PT Indomarco Prismatama atau Indomaret Group. Saya sudah bekerja dari Indomaret Cabang Batam sebelum di batam ada Indomaret (Maret 2015), dan pernah ikut Training ke Cabang Pekanbaru. Saya sering mengganti atau mengisi kekosongan PIC untuk Dept EDP. Pesan saya buat teman-teman di luar sana, dan siapa saja tolong jangan merendahkan pekerjaan orang lain karena pada dasarnya setiap pekerjaan memiliki titik kekurangan dan kelebihan, sebagai rekan kerja kita hanya perlu menghargai dan menghormati setiap pekerjaan orang lain. Untuk detail pekerjaan mungkin tidak bisa saya sampaikan di sini.
       <li>2021 - saat ini sebagai PIC Networking yang bertugas memastikan seluruh jaringan cabang Batam yaitu OFFICE, DC, DEPO, TC dan TOKO</li>
       <li>2018 - 2021 sebagai EDP OPR yang bertugas Troubleshoot masalah Hardware, Network, Software toko</li>
-      <li>2015 - 2018 sebagai EDP Service, EDP OPR, EDP Logistik, EDP Network & Server</li>
-    </details>
-  
-    <li><details><summary>Operator Warnet di Niconet Internet Center Des 2013 - Feb 2015</summary><br></li>
+      <li>2015 - 2018 sebagai EDP Service, EDP OPR, EDP Logistik, EDP Network & Server</li><br>
+      Operator Warnet di Niconet Internet Center Des 2013 - Feb 2015
       <li>Manage Network</li>
       <li>Handle customer complaints and inquiries</li>
       <li>Dealing extensively with external or internal clients</li>
@@ -82,25 +80,19 @@
       <li>Working Routine Preventative measures and implement and monitor network security</li>
       <li>Scheduling upgrades and security backups of hardware and software systems</li>
       <li>Keep up to date with the latest technology</li>
-      <li>Providing solutions to client problems</li>
-  </details>
-  
-    <li><details><summary>Equipment Engineer UNISEM Nov 2011 - Okt 2013</summary><br></li>
+      <li>Providing solutions to client problems</li><br>
+      Equipment Engineer UNISEM Nov 2011 - Okt 2013
       <li>maintain functionality of the equipment/gauges/machines to achieve up time</li>
       <li>responsible to set up, convert</li>
       <li>Handle other duties as assigned by the superior</li>
-      <li>Co ordinate with other group if assist required</li>
-  </details>
-  
-    <li><details><summary>Process Engineer PT Sat Nusapersada Tbk (PTSN) Nov 2009 - Okt 2011/summary><br></li>
+      <li>Co ordinate with other group if assist required</li><br>
+      Process Engineer PT Sat Nusapersada Tbk (PTSN) Nov 2009 - Okt 2011
       <li>Document control (Create and Check Document Control) and programming (Create Program)</li>
       <li>Check Document from client and distribute to Technician</li>
       <li>Revise the document</li>
       <li>Obs document</li><
       /details>
-      
     </p>
-      
     <h3 class="w3-padding-16 w3-text-light-grey">My Skills</h3>
     <p class="w3-wide">Networking</p>
     <div class="w3-white">
