--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">Indra Setiawan</h2>
     <hr style="width:200px" class="w3-opacity">
-    <p><li><details><summary>Pengalaman Kerja</summary><br></li>
+    <p>
+      <li><details><summary>Pengalaman Kerja</summary><br></li>
       Saya indra setiawan, saya saat ini bekerja di PT Indomarco Prismatama atau Indomaret Group. Saya sudah bekerja dari Indomaret Cabang Batam sebelum di batam ada Indomaret (Maret 2015), dan pernah ikut Training ke Cabang Pekanbaru. Saya sering mengganti atau mengisi kekosongan PIC untuk Dept EDP. Pesan saya buat teman-teman di luar sana, dan siapa saja tolong jangan merendahkan pekerjaan orang lain karena pada dasarnya setiap pekerjaan memiliki titik kekurangan dan kelebihan, sebagai rekan kerja kita hanya perlu menghargai dan menghormati setiap pekerjaan orang lain. Untuk detail pekerjaan mungkin tidak bisa saya sampaikan di sini.
       <li>2021 - saat ini sebagai PIC Networking yang bertugas memastikan seluruh jaringan cabang Batam yaitu OFFICE, DC, DEPO, TC dan TOKO</li>
       <li>2018 - 2021 sebagai EDP OPR yang bertugas Troubleshoot masalah Hardware, Network, Software toko</li>
@@ -90,8 +91,8 @@
       <li>Document control (Create and Check Document Control) and programming (Create Program)</li>
       <li>Check Document from client and distribute to Technician</li>
       <li>Revise the document</li>
-      <li>Obs document</li><
-      /details>
+      <li>Obs document</li>
+      </details>
     </p>
     <h3 class="w3-padding-16 w3-text-light-grey">My Skills</h3>
     <p class="w3-wide">Networking</p>
