--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
     <h2 class="w3-text-light-grey">Contact Me</h2>
     <hr style="width:200px" class="w3-opacity">
     <div class="w3-section">
-      <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Kota Batam, Indonesia</p>
-      <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> +62 08962336XXX</p>
+      <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> World</p>
+      <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> +62 0896XXX</p>
       <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> -</p>
     </div><br>
     <a href="https://github.com/Gand0r"><img alt="GitHub top language" src="https://img.shields.io/github/languages/top/Gand0r/home?style=for-the-badge"></a>
